--- a/blog.html
+++ b/blog.html
@@ -1,59 +1,89 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Distributeur d'eau - ToutouStyle</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Blog - ToutouStyle 🐾</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #fefefe; color: #333; }
-    header { background: #ffa726; padding: 1rem; text-align: center; color: white; }
-    main { max-width: 800px; margin: auto; padding: 2rem; }
-    .product-image { width: 100%; max-width: 500px; margin: auto; display: block; border-radius: 10px; }
-    h1 { font-size: 2rem; margin-bottom: 0.5rem; }
-    ul { padding-left: 1.2rem; }
-    .btn {
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #fffaf5;
+      color: #333;
+    }
+    header {
+      background-color: #f3e6d8;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2em;
+    }
+    .container {
+      max-width: 800px;
+      margin: auto;
+      padding: 30px 20px;
+    }
+    article {
+      margin-bottom: 40px;
+      padding-bottom: 20px;
+      border-bottom: 1px solid #ddd;
+    }
+    article h2 {
+      color: #e07a5f;
+      margin-bottom: 10px;
+    }
+    article p {
+      line-height: 1.6;
+    }
+    a.back {
       display: inline-block;
-      margin-top: 1rem;
-      padding: 0.7rem 1.2rem;
-      background: #43a047;
-      color: white;
-      border: none;
-      border-radius: 4px;
+      margin-bottom: 30px;
+      color: #e07a5f;
       text-decoration: none;
       font-weight: bold;
     }
+    a.back:hover {
+      text-decoration: underline;
+    }
     footer {
       text-align: center;
-      padding: 1rem;
-      background: #eee;
-      font-size: 0.8rem;
+      padding: 20px;
+      font-size: 0.9em;
+      background: #f5f5f5;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>ToutouStyle</h1>
-    <p>Accessoires pour chiens et chats</p>
-    <nav style="margin-top: 1rem;">
-  <a href="toutoustyle.html" style="color: white; margin-right: 20px;">Accueil</a>
-  <a href="blog.html" style="color: white;">Blog</a>
-</nav>
 
+  <header>
+    <h1>Le Blog ToutouStyle 🐾</h1>
   </header>
-  <main>
-    <img src="https://via.placeholder.com/500x300?text=Distributeur+d'eau" alt="Distributeur d'eau" class="product-image">
-    <h1>Distributeur d'eau automatique</h1>
-    <p>Ce distributeur permet à votre animal d’avoir de l’eau fraîche en continu, idéal pour les journées chaudes ou les longues absences.</p>
-    <h2>Avantages :</h2>
-    <ul>
-      <li>Grande capacité</li>
-      <li>Facile à nettoyer</li>
-      <li>Design moderne</li>
-    </ul>
-    <a href="#" class="btn">Voir sur Amazon</a>
-  </main>
+
+  <div class="container">
+    <a class="back" href="index.html">← Retour à l’accueil</a>
+<a href="article-fontaine.html">Top 3 des fontaines à eau pour chien</a>
+
+    <article>
+      <h2>Top 3 des fontaines à eau pour chien</h2>
+      <p>Offrir une bonne hydratation à son chien est essentiel. Voici 3 modèles qu'on adore pour leur design, silence et efficacité...</p>
+    </article>
+
+    <article>
+      <h2>5 laisses stylées à moins de 20€</h2>
+      <p>Pas besoin de casser la tirelire pour que ton toutou ait la classe. Sélection de laisses design et pratiques à petit prix...</p>
+    </article>
+
+    <article>
+      <h2>Comment bien choisir un harnais pour petit chien ?</h2>
+      <p>Chaque chien a sa morphologie, on t'explique comment faire le bon choix pour allier confort, sécurité et look 👌</p>
+    </article>
+  </div>
+
   <footer>
-    &copy; 2025 ToutouStyle - Site d’affiliation non officiel
+    © 2025 ToutouStyle
   </footer>
+
 </body>
 </html>
