--- a/article-fontaine.html
+++ b/article-fontaine.html
@@ -66,7 +66,7 @@
 
     <p>💡 Recommandée pour les chiens jusqu’à 20kg, ou même pour les foyers avec 2 animaux.</p>
 
-    <a class="bouton" href="#">Voir le produit sur Amazon</a>
+    <a href="https://amzn.to/3YeU1eR" target="_blank">Voir le produit sur Amazon</a>
 
     <br><br>
     <a class="back" href="blog.html">← Retour au blog</a>
