--- a/blog.html
+++ b/blog.html
@@ -63,20 +63,20 @@
 
   <div class="container">
     <a class="back" href="index.html">← Retour à l’accueil</a>
-<a href="article-fontaine.html">Top 3 des fontaines à eau pour chien</a>
+
 
     <article>
-      <h2>Top 3 des fontaines à eau pour chien</h2>
+      <h2><a href="article-fontaine.html">Top 3 des fontaines à eau pour chien</a></h2>
       <p>Offrir une bonne hydratation à son chien est essentiel. Voici 3 modèles qu'on adore pour leur design, silence et efficacité...</p>
     </article>
 
     <article>
-      <h2>5 laisses stylées à moins de 20€</h2>
+      <h2><a href= "article-laisses.html">5 laisses stylées à moins de 20€</a></h2>
       <p>Pas besoin de casser la tirelire pour que ton toutou ait la classe. Sélection de laisses design et pratiques à petit prix...</p>
     </article>
 
     <article>
-      <h2>Comment bien choisir un harnais pour petit chien ?</h2>
+      <h2><a href ="article-harnais.html">Comment bien choisir un harnais pour petit chien ?</a></h2>
       <p>Chaque chien a sa morphologie, on t'explique comment faire le bon choix pour allier confort, sécurité et look 👌</p>
     </article>
   </div>
