--- a/article-fontaine.html
+++ b/article-fontaine.html
@@ -1,81 +1,41 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Top 3 des fontaines à eau pour chien</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #fffaf5;
-      color: #333;
-      margin: 0;
-    }
-    header {
-      background-color: #f3e6d8;
-      padding: 20px;
-      text-align: center;
-    }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      padding: 30px 20px;
-    }
-    h1 {
-      color: #e07a5f;
-    }
-    img {
-      width: 100%;
-      border-radius: 10px;
-      margin: 20px 0;
-    }
-    h2 {
-      color: #e07a5f;
-      margin-top: 30px;
-    }
-    a.bouton {
-      display: inline-block;
-      padding: 10px 18px;
-      background-color: #e07a5f;
-      color: white;
-      border-radius: 8px;
-      text-decoration: none;
-      margin-top: 20px;
-    }
-    a.bouton:hover {
-      background-color: #d45a40;
-    }
-    a.back {
-      display: inline-block;
-      margin-top: 40px;
-      color: #e07a5f;
-      text-decoration: none;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <header>
-    <h1>Top 3 des fontaines à eau pour chien</h1>
+    <h1>Top 3 des fontaines à eau pour chien 💧</h1>
   </header>
 
   <div class="container">
     <p>Hydrater son chien correctement, c’est super important. Voici notre sélection de fontaines à eau pratiques, silencieuses et design pour garder ton toutou bien hydraté 💧🐶</p>
 
-    <h2>🥇 PetSafe Drinkwell Platinum – Fontaine à eau en cascade (5 L)</h2>
-    <img src="https://a.media-amazon.com/images/I/71FjyEc8DgL._AC_SL1500_.jpg" alt="Fontaine PetSafe">
-    <p>Cette fontaine offre un débit d'eau en cascade qui incite les chiens à boire davantage. Elle dispose d'un filtre à charbon activé pour une eau propre et d'une capacité de 5 litres, idéale pour les chiens de taille moyenne à grande.</p>
-    <a href="https://amzn.to/430sArF" class="bouton">Acheter sur Amazon</a>
+    <div class="produit">
+      <h2><span class="badge">🥇 Top 1</span>PetSafe Drinkwell Platinum – Fontaine en cascade (5 L)</h2>
+      <img src="https://a.media-amazon.com/images/I/71FjyEc8DgL._AC_SL1500_.jpg" alt="Fontaine PetSafe">
+      <p>Cette fontaine offre un débit d'eau en cascade qui incite les chiens à boire davantage. Elle dispose d'un filtre à charbon activé pour une eau propre et d'une capacité de 5 litres, idéale pour les chiens de taille moyenne à grande.</p>
+      <a href="https://amzn.to/430sArF" target="_blank" class="bouton">Acheter sur Amazon</a>
+    </div>
 
-    <h2>🥈 NPET DF30 – Fontaine automatique pour chiens (8 L)</h2>
-    <img src="https://a.media-amazon.com/images/I/71mDEpIJlqL._AC_SL1500_.jpg" alt="Fontaine NPET">
-    <p>Avec une grande capacité de 8 litres, cette fontaine est parfaite pour les foyers avec plusieurs chiens ou de grands chiens. Elle est équipée d'une pompe ultra silencieuse et d'un système de filtration triple pour garantir une eau propre en permanence.</p>
-    <a href="https://amzn.to/4jt37gw" target="_blank" class="bouton">Acheter sur Amazon</a>
+    <div class="produit">
+      <h2><span class="badge">🥈 Top 2</span>NPET DF30 – Fontaine automatique (8 L)</h2>
+      <img src="https://a.media-amazon.com/images/I/71mDEpIJlqL._AC_SL1500_.jpg" alt="Fontaine NPET">
+      <p>Avec une grande capacité de 8 litres, cette fontaine est parfaite pour les foyers avec plusieurs chiens ou de grands chiens. Elle est équipée d'une pompe ultra silencieuse et d'un système de filtration triple pour garantir une eau propre en permanence.</p>
+      <a href="https://amzn.to/4jt37gw" target="_blank" class="bouton">Acheter sur Amazon</a>
+    </div>
 
-    <h2>🥉 Kittyspout – Fontaine à eau sans fil pour chiens (8 L)</h2>
-    <img src="https://a.media-amazon.com/images/I/816ec2F6sOL._AC_SL1500_.jpg" alt="Fontaine Uahpet">
-    <p>Cette fontaine sans fil de 8 litres est équipée d'un détecteur de mouvement et d'une batterie rechargeable de 5000 mAh, offrant jusqu'à 30 jours d'autonomie. Elle est idéale pour les propriétaires cherchant une solution sans fil et pratique.</p>
-    <a href="https://amzn.to/42tw7yz" target="_blank" class="bouton">Acheter sur Amazon</a> <br>
+    <div class="produit">
+      <h2><span class="badge">🥉 Top 3</span>Kittyspout – Fontaine sans fil (8 L)</h2>
+      <img src="https://a.media-amazon.com/images/I/816ec2F6sOL._AC_SL1500_.jpg" alt="Fontaine Kittyspout">
+      <p>Cette fontaine sans fil de 8 litres est équipée d'un détecteur de mouvement et d'une batterie rechargeable de 5000 mAh, offrant jusqu'à 30 jours d'autonomie. Elle est idéale pour les propriétaires cherchant une solution sans fil et pratique.</p>
+      <a href="https://amzn.to/42tw7yz" target="_blank" class="bouton">Acheter sur Amazon</a>
+    </div>
 
     <a href="index.html" class="back">← Retour à l'accueil</a>
   </div>
