--- a/article-harnais.html
+++ b/article-harnais.html
@@ -4,55 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Comment bien choisir un harnais pour petit chien</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #fffaf5;
-      color: #333;
-      margin: 0;
-    }
-    header {
-      background-color: #f3e6d8;
-      padding: 20px;
-      text-align: center;
-    }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      padding: 30px 20px;
-    }
-    h1 {
-      color: #e07a5f;
-    }
-    img {
-      width: 100%;
-      border-radius: 10px;
-      margin: 20px 0;
-    }
-    h2 {
-      color: #e07a5f;
-      margin-top: 30px;
-    }
-    a.bouton {
-      display: inline-block;
-      padding: 10px 18px;
-      background-color: #e07a5f;
-      color: white;
-      border-radius: 8px;
-      text-decoration: none;
-      margin-top: 20px;
-    }
-    a.bouton:hover {
-      background-color: #d45a40;
-    }
-    a.back {
-      display: inline-block;
-      margin-top: 40px;
-      color: #e07a5f;
-      text-decoration: none;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <header>
@@ -74,9 +28,10 @@
     <h2>4. Facilité d’enfilage</h2>
     <p>Certains harnais sont plus faciles à enfiler que d’autres (notamment ceux qui s’enfilent par la tête). Teste ce qui fonctionne le mieux pour toi et ton toutou.</p>
 
-    <img src="https://a.media-amazon.com/images/I/71UhYWBbKOL._AC_SL1500_.jpg" alt="harnais petit chien" />
+    <img src="https://a.media-amazon.com/images/I/71UhYWBbKOL._AC_SL1500_.jpg" alt="Harnais pour petit chien" />
 
     <p>👉 Voici un harnais adapté aux petits chiens, bien noté et confortable :</p>
+
     <a href="https://amzn.to/3YO4Lkp" target="_blank" class="bouton">Voir ce harnais sur Amazon</a> <br>
 
     <a href="blog.html" class="back">← Retour au blog</a>
