--- a/article-laisses.html
+++ b/article-laisses.html
@@ -4,54 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>5 laisses stylées à moins de 20€</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #fffaf5;
-      color: #333;
-    }
-    header {
-      background-color: #f3e6d8;
-      padding: 20px;
-      text-align: center;
-    }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      padding: 30px 20px;
-    }
-    h1 {
-      color: #e07a5f;
-    }
-    .produit {
-      margin-bottom: 30px;
-      border-bottom: 1px solid #ddd;
-      padding-bottom: 20px;
-    }
-    img {
-      width: 100%;
-      border-radius: 10px;
-      margin: 10px 0;
-    }
-    a.bouton {
-      display: inline-block;
-      padding: 10px 18px;
-      background-color: #e07a5f;
-      color: white;
-      border-radius: 8px;
-      text-decoration: none;
-    }
-    a.bouton:hover {
-      background-color: #d45a40;
-    }
-    a.back {
-      display: inline-block;
-      margin-top: 30px;
-      color: #e07a5f;
-      text-decoration: none;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
