--- a/blog.html
+++ b/blog.html
@@ -2,88 +2,31 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Blog - ToutouStyle 🐾</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #fffaf5;
-      color: #333;
-    }
-    header {
-      background-color: #f3e6d8;
-      padding: 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2em;
-    }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      padding: 30px 20px;
-    }
-    article {
-      margin-bottom: 40px;
-      padding-bottom: 20px;
-      border-bottom: 1px solid #ddd;
-    }
-    article h2 {
-      color: #e07a5f;
-      margin-bottom: 10px;
-    }
-    article p {
-      line-height: 1.6;
-    }
-    a.back {
-      display: inline-block;
-      margin-bottom: 30px;
-      color: #e07a5f;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    a.back:hover {
-      text-decoration: underline;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9em;
-      background: #f5f5f5;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ToutouStyle - Blog</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <header>
-    <h1>Le Blog ToutouStyle 🐾</h1>
+    <h1>Blog ToutouStyle 🐶</h1>
   </header>
 
   <div class="container">
-    <a class="back" href="index.html">← Retour à l’accueil</a>
+    <p>Retrouve tous nos conseils, comparatifs et sélections stylées pour ton toutou adoré.</p>
 
+    <h2>Nos derniers articles :</h2>
+    <ul class="liste-articles">
+      <li><a href="article-fontaine.html">Top 3 des fontaines à eau pour chien</a></li>
+      <li><a href="article-laisses.html">5 laisses stylées à moins de 20€</a></li>
+      <li><a href="article-harnais.html">Comment bien choisir un harnais pour petit chien</a></li>
+      <li><a href="article-nourriture.html">Nourriture pour chien sensible : nos conseils</a></li>
+      <li><a href="article-colliers.html">Comparatif : colliers pour petit chien</a></li>
+    </ul>
 
-    <article>
-      <h2><a href="article-fontaine.html">Top 3 des fontaines à eau pour chien</a></h2>
-      <p>Offrir une bonne hydratation à son chien est essentiel. Voici 3 modèles qu'on adore pour leur design, silence et efficacité...</p>
-    </article>
-
-    <article>
-      <h2><a href= "article-laisses.html">5 laisses stylées à moins de 20€</a></h2>
-      <p>Pas besoin de casser la tirelire pour que ton toutou ait la classe. Sélection de laisses design et pratiques à petit prix...</p>
-    </article>
-
-    <article>
-      <h2><a href ="article-harnais.html">Comment bien choisir un harnais pour petit chien ?</a></h2>
-      <p>Chaque chien a sa morphologie, on t'explique comment faire le bon choix pour allier confort, sécurité et look 👌</p>
-    </article>
+    <a href="index.html" class="bouton">← Retour à l'accueil</a>
   </div>
-
-  <footer>
-    © 2025 ToutouStyle
-  </footer>
 
 </body>
 </html>
