--- a/index.html
+++ b/index.html
@@ -3,44 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ToutouStyle - Accessoires stylés pour chiens</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #fffaf5;
-      margin: 0;
-      color: #333;
-    }
-    header {
-      background-color: #f3e6d8;
-      padding: 30px;
-      text-align: center;
-    }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      padding: 20px;
-    }
-    h1 {
-      color: #e07a5f;
-    }
-    p {
-      font-size: 1.1em;
-    }
-    a.bouton {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 10px 18px;
-      background-color: #e07a5f;
-      color: white;
-      border-radius: 8px;
-      text-decoration: none;
-    }
-    a.bouton:hover {
-      background-color: #d45a40;
-    }
-  </style>
+  <title>ToutouStyle - Accessoires pour petits chiens</title>
+  <meta name="description" content="ToutouStyle t'aide à trouver les meilleurs accessoires stylés pour ton petit chien : laisses, harnais, fontaines à eau, et plus encore.">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <header>
@@ -48,20 +15,36 @@
   </header>
 
   <div class="container">
-    <p>On sélectionne pour toi les meilleurs accessoires stylés et utiles pour ton chien, testés et approuvés 🐶</p>
+    <p><strong>Ta source n°1</strong> pour équiper ton petit chien avec style et à petit prix 🐶</p>
 
     <h2>🔥 Produit du moment</h2>
-    <p>Découvre notre sélection de <strong>fontaines à eau pour chien</strong> : confort, hygiène et design au top !</p>
+    <p>💧 Découvre notre sélection de <strong>fontaines à eau pour chien</strong> : top pour l'hygiène, le confort et l’esthétique !</p>
     <a href="article-fontaine.html" class="bouton">Voir le Top 3 des fontaines</a>
 
-    <h2>📝 Derniers articles</h2>
+    <h2>📝 Derniers articles du blog</h2>
     <ul>
       <li><a href="article-laisses.html">5 laisses stylées à moins de 20€</a></li>
       <li><a href="article-harnais.html">Comment bien choisir un harnais pour petit chien</a></li>
+      <li><a href="article-colliers.html">Comparatif des colliers pour petit chien</a></li>
+      <li><a href="article-nourriture.html">Nourriture pour chien sensible : nos conseils</a></li>
     </ul>
 
-    <a href="blog.html" class="bouton">Accéder au blog</a>
+    <a href="blog.html" class="bouton">📚 Accéder à tous les articles</a>
+
+    <h2>💡 Pourquoi suivre ToutouStyle ?</h2>
+    <ul>
+      <li>✅ Des guides pratiques et simples</li>
+      <li>✅ Des produits testés et stylés</li>
+      <li>✅ Des conseils pensés pour les petits chiens</li>
+    </ul>
+
+    <p><em>Et si tu veux recevoir nos nouveautés directement dans ta boîte mail, une newsletter arrive bientôt !</em></p>
+
   </div>
+
+  <footer>
+    <p>&copy; 2025 ToutouStyle. Blog d'affiliation pour les passionnés de petits chiens 🐕‍🦺</p>
+  </footer>
 
 </body>
 </html>
