--- a/article-fontaine.html
+++ b/article-fontaine.html
@@ -2,43 +2,138 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Top 3 des fontaines à eau pour chien</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Top 3 des meilleures fontaines à eau pour chien (Guide 2024)</title>
+  <meta name="description" content="Top 3 2024 des fontaines à eau pour chien : comparatif, avis, et conseils pour hydrater ton compagnon avec style et efficacité.">
+
+  <!-- Open Graph Facebook -->
+  <meta property="og:title" content="Top 3 des meilleures fontaines à eau pour chien (Guide 2024)" />
+  <meta property="og:description" content="Top 3 2024 : fontaines pratiques, silencieuses et design pour chiens. Notre comparatif complet !" />
+  <meta property="og:image" content="URL_DE_TA_IMAGE" />
+  <meta property="og:url" content="URL_DE_TA_PAGE" />
+  <meta property="og:type" content="article" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Top 3 des meilleures fontaines à eau pour chien (Guide 2024)" />
+  <meta name="twitter:description" content="Découvre les meilleures fontaines pour ton chien, avec avis et conseils pratiques !" />
+  <meta name="twitter:image" content="URL_DE_TA_IMAGE" />
+
+  <link rel="stylesheet" href="style.css" />
 </head>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Quelle est la meilleure fontaine pour un chiot ?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Pour un chiot, choisis une fontaine basse avec un débit doux, comme la PetSafe Drinkwell Platinum."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Comment nettoyer une fontaine à eau pour chien ?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Nettoie chaque semaine avec de l'eau chaude et du savon doux, et change le filtre tous les mois."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Quelle est la meilleure fontaine pour un gros chien ?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Privilégie une fontaine de grande capacité (8L minimum) comme la NPET DF30."
+      }
+    }
+  ]
+}
+</script>
 
 <body>
 
   <header>
-    <h1>Top 3 des fontaines à eau pour chien 💧</h1>
+    <h1>Top 3 des meilleures fontaines à eau pour chien (Guide 2024) 💧</h1>
   </header>
 
   <div class="container">
-    <p>Hydrater son chien correctement, c’est super important. Voici notre sélection de fontaines à eau pratiques, silencieuses et design pour garder ton toutou bien hydraté 💧🐶</p>
+    <article>
 
-    <div class="produit">
-      <h2><span class="badge">🥇 Top 1</span>PetSafe Drinkwell Platinum – Fontaine en cascade (5 L)</h2>
-      <img src="https://a.media-amazon.com/images/I/71FjyEc8DgL._AC_SL1500_.jpg" alt="Fontaine PetSafe">
-      <p>Cette fontaine offre un débit d'eau en cascade qui incite les chiens à boire davantage. Elle dispose d'un filtre à charbon activé pour une eau propre et d'une capacité de 5 litres, idéale pour les chiens de taille moyenne à grande.</p>
-      <a href="https://amzn.to/430sArF" target="_blank" class="bouton">Acheter sur Amazon</a>
-    </div>
+      <p>Un chien en pleine forme commence par une bonne hydratation 🐶💧. Dans ce guide 2024, découvre les meilleures fontaines à eau pour chien : silencieuses, pratiques et au top du design. Trouve celle qui correspond parfaitement à ton compagnon !</p>
 
-    <div class="produit">
-      <h2><span class="badge">🥈 Top 2</span>NPET DF30 – Fontaine automatique (8 L)</h2>
-      <img src="https://a.media-amazon.com/images/I/71mDEpIJlqL._AC_SL1500_.jpg" alt="Fontaine NPET">
-      <p>Avec une grande capacité de 8 litres, cette fontaine est parfaite pour les foyers avec plusieurs chiens ou de grands chiens. Elle est équipée d'une pompe ultra silencieuse et d'un système de filtration triple pour garantir une eau propre en permanence.</p>
-      <a href="https://amzn.to/4jt37gw" target="_blank" class="bouton">Acheter sur Amazon</a>
-    </div>
+      <nav class="table-des-matieres">
+        <h2>Sommaire</h2>
+        <ul>
+          <li><a href="#pourquoi-fontaine">Pourquoi une fontaine à eau est indispensable pour ton chien ?</a></li>
+          <li><a href="#comment-choisir">Comment bien choisir la meilleure fontaine à eau pour chien ?</a></li>
+          <li><a href="#selection-top3">Comparatif 2024 : Top 3 des meilleures fontaines pour chien</a></li>
+          <li><a href="#faq">FAQ - Tes questions fréquentes</a></li>
+        </ul>
+      </nav>
 
-    <div class="produit">
-      <h2><span class="badge">🥉 Top 3</span>Kittyspout – Fontaine sans fil (8 L)</h2>
-      <img src="https://a.media-amazon.com/images/I/816ec2F6sOL._AC_SL1500_.jpg" alt="Fontaine Kittyspout">
-      <p>Cette fontaine sans fil de 8 litres est équipée d'un détecteur de mouvement et d'une batterie rechargeable de 5000 mAh, offrant jusqu'à 30 jours d'autonomie. Elle est idéale pour les propriétaires cherchant une solution sans fil et pratique.</p>
-      <a href="https://amzn.to/42tw7yz" target="_blank" class="bouton">Acheter sur Amazon</a>
-    </div>
+      <h2 id="pourquoi-fontaine">Pourquoi une fontaine à eau est indispensable pour ton chien ?</h2>
+      <p>Les chiens préfèrent l'eau fraîche en mouvement. Une fontaine stimule leur envie de boire, réduit les risques de déshydratation et garde l'eau propre grâce à la filtration.</p>
 
-    <a href="index.html" class="back">← Retour à l'accueil</a>
+      <h2 id="comment-choisir">Comment bien choisir la meilleure fontaine à eau pour chien ?</h2>
+      <h3>💧 Capacité</h3>
+      <p>Adapte la taille de la fontaine à ton chien et au nombre d'animaux à la maison.</p>
+
+      <h3>🛠️ Facilité d'entretien</h3>
+      <p>Privilégie les modèles faciles à démonter et à nettoyer pour garantir une eau saine.</p>
+
+      <h3>🔇 Niveau sonore</h3>
+      <p>Opte pour une pompe silencieuse, plus agréable pour toi et ton animal.</p>
+
+      <h2 id="selection-top3">Comparatif 2024 : Top 3 des meilleures fontaines pour chien</h2>
+
+      <div class="produit">
+        <h3><span class="badge">🥇 Top 1</span> PetSafe Drinkwell Platinum – Fontaine en cascade (5 L)</h3>
+        <img src="https://a.media-amazon.com/images/I/71FjyEc8DgL._AC_SL1500_.jpg" alt="Fontaine à eau PetSafe Drinkwell Platinum" loading="lazy">
+        <p><strong>Pourquoi choisir la PetSafe Drinkwell Platinum ?</strong> Cascade naturelle, grande capacité de 5L, filtre à charbon actif pour une eau toujours fraîche. Idéale pour chiens de taille moyenne à grande.</p>
+        <p><em>👉 Clique ci-dessous pour voir le prix et les avis clients !</em></p>
+        <a href="https://amzn.to/430sArF" target="_blank" rel="noopener noreferrer" class="bouton">Voir sur Amazon →</a>
+      </div>
+
+      <div class="produit">
+        <h3><span class="badge">🥈 Top 2</span> NPET DF30 – Fontaine automatique (8 L)</h3>
+        <img src="https://a.media-amazon.com/images/I/71mDEpIJlqL._AC_SL1500_.jpg" alt="Fontaine à eau NPET DF30" loading="lazy">
+        <p><strong>Pourquoi choisir la NPET DF30 ?</strong> Idéale pour plusieurs chiens avec sa capacité de 8L, filtration triple, pompe ultra silencieuse pour une hydratation sans stress.</p>
+        <p><em>👉 Découvre les avis et le meilleur prix !</em></p>
+        <a href="https://amzn.to/4jt37gw" target="_blank" rel="noopener noreferrer" class="bouton">Voir sur Amazon →</a>
+      </div>
+
+      <div class="produit">
+        <h3><span class="badge">🥉 Top 3</span> Kittyspout – Fontaine sans fil (8 L)</h3>
+        <img src="https://a.media-amazon.com/images/I/816ec2F6sOL._AC_SL1500_.jpg" alt="Fontaine à eau sans fil Kittyspout" loading="lazy">
+        <p><strong>Pourquoi choisir la Kittyspout ?</strong> Fontaine sans fil innovante avec capteur de mouvement, batterie 5000 mAh pour 30 jours d'autonomie. Parfaite pour un usage pratique et design.</p>
+        <p><em>👉 Voir les avis et le prix en ligne !</em></p>
+        <a href="https://amzn.to/42tw7yz" target="_blank" rel="noopener noreferrer" class="bouton">Voir sur Amazon →</a>
+      </div>
+
+      <h2 id="faq">FAQ - Tes questions fréquentes</h2>
+
+      <h3>Quelle est la meilleure fontaine pour un chiot ?</h3>
+      <p>Pour un chiot, choisis une fontaine basse avec un débit doux comme la PetSafe Drinkwell Platinum.</p>
+
+      <h3>Comment nettoyer une fontaine à eau pour chien ?</h3>
+      <p>Nettoie la fontaine chaque semaine avec de l'eau chaude et du savon doux. Change le filtre tous les mois environ.</p>
+
+      <h3>Quelle est la meilleure fontaine pour un gros chien ?</h3>
+      <p>Opte pour une fontaine grande capacité comme la NPET DF30 (8L) pour répondre aux besoins d'un grand chien.</p>
+
+      <a href="index.html" class="back">← Retour à l'accueil</a>
+
+    </article>
   </div>
+
+  <footer>
+    <p>© 2024 - Mon Blog Animalier | <a href="politique-de-confidentialite.html">Politique de confidentialité</a></p>
+  </footer>
 
 </body>
 </html>
